- The keybinding cleaning function did concurrent modifications of an Eclipse Internal collection. Fix laurentpetit/ccw-plugin-manager#1

=== Documentation
- Add a mention about keyboard binding for switching between default and strict editing modes ( kbd:[Alt+D] ). Fixes #346

=== Leiningen Support
- Embedded Leiningen version upgraded from version 2.5.0 to 2.5.1

=== Miscellaneous Fixes
- New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682
- Better support for opening with the editor files ending with clojure extensions: `cljs`, `cljx`, `clja`, `cljc`
- When launching a REPL for a project it a REPL is already running for it, there is now no exception thrown when accepting to reuse the existing one
- Code completion works even if there's a comment at the end of the document. Fixes #777

=== Miscellaneous Enhancements
- Print maven coordinates of Counterclockwise dependencies at plugin startup in `.metadata/.log`. Fixes #741

=== Counterclockwise embedded nREPL
Counterclockwise ships with an embedded nREPL server. The following enhancements have been applied:

- New Command Line option `-Dccw.nrepl.port=[1-65535]`: allows to select the embedded nrepl port.
- Command Line option `ccw.autostartrepl` has been renamed to `ccw.nrepl.autostart`.
- When Command Line option `ccw.autostartrepl` is specified, the `cider-nrepl` middleware is used instead of the nRepl default middleware.


== Counterclockwise 0.31.2

`0.31.2` released on December 4, 2014

=== User Plugins

- Added namespace `ccw.api.markers` for managing resource markers. Resource markers typically appear in the editor margins (error markers, warning markers, tasks, bookmarks, etc.), and in their respective problem views, task views, bookmark views, etc.
